chore: add debug tools

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,7 @@ endfunction()
 
 add_executable(chronicle
     "main.cc"
+    "Memory.cc"
     "Platform/App.h"
     "Platform/App.cc"
     "Renderer/CommandBuffer.h"
