chore: complete api refactor

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,21 +28,22 @@ add_executable(chronicle
     "pch.cc"
     "Platform/App.h"
     "Platform/App.cc"
-    "Renderer/CommandBuffer.h"
+    "Renderer/CommandBufferI.h"
     "Renderer/Common.h"
-    "Renderer/DescriptorSet.h"
-    "Renderer/Fence.h"
-    "Renderer/Image.h"
+    "Renderer/DescriptorSetI.h"
+    "Renderer/FenceI.h"
+    "Renderer/ImageI.h"
     "Renderer/ImageInfo.h"
-    "Renderer/IndexBuffer.h"
-    "Renderer/Pipeline.h"
+    "Renderer/IndexBufferI.h"
+    "Renderer/PipelineI.h"
     "Renderer/PipelineInfo.h"
     "Renderer/Renderer.h"
+    "Renderer/RendererI.h"
     "Renderer/RendererError.h"
-    "Renderer/RenderPass.h"
+    "Renderer/RenderPassI.h"
     "Renderer/RenderPassInfo.h"
-    "Renderer/Semaphore.h"
-    "Renderer/VertexBuffer.h"
+    "Renderer/SemaphoreI.h"
+    "Renderer/VertexBufferI.h"
     "Renderer/VertexBufferInfo.h"
     "Renderer/Vulkan/VulkanBuffer.h"
     "Renderer/Vulkan/VulkanBuffer.cc"
