--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,8 @@ sonar.projectKey=skaman_chronicle7
 sonar.organization=skaman
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=chronicle7
-#sonar.projectVersion=1.0
+sonar.projectName=chronicle
+sonar.projectVersion=1.0
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sources=src
+sonar.sourceEncoding=UTF-8
