chore: api refactor

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -42,18 +42,15 @@ add_library(chronicle-core
     "Renderer/CommandBufferI.h"
     "Renderer/Common.h"
     "Renderer/DescriptorSetI.h"
-    "Renderer/FenceI.h"
-    "Renderer/ImageI.h"
-    "Renderer/ImageInfo.h"
     "Renderer/IndexBufferI.h"
     "Renderer/PipelineI.h"
     "Renderer/PipelineInfo.h"
     "Renderer/Renderer.h"
     "Renderer/RendererI.h"
     "Renderer/RendererError.h"
-    "Renderer/RenderPassI.h"
-    "Renderer/RenderPassInfo.h"
-    "Renderer/SemaphoreI.h"
+    
+    "Renderer/TextureI.h"
+    "Renderer/TextureInfo.h"
     "Renderer/VertexBufferI.h"
     "Renderer/VertexBufferInfo.h"
     "Renderer/Vulkan/VulkanCommandBuffer.h"
@@ -61,10 +58,6 @@ add_library(chronicle-core
     "Renderer/Vulkan/VulkanCommon.h"
     "Renderer/Vulkan/VulkanDescriptorSet.h"
     "Renderer/Vulkan/VulkanDescriptorSet.cc"
-    "Renderer/Vulkan/VulkanFence.h"
-    "Renderer/Vulkan/VulkanFence.cc"
-    "Renderer/Vulkan/VulkanImage.h"
-    "Renderer/Vulkan/VulkanImage.cc"
     "Renderer/Vulkan/VulkanIndexBuffer.h"
     "Renderer/Vulkan/VulkanIndexBuffer.cc"
     "Renderer/Vulkan/VulkanInstance.h"
@@ -73,10 +66,8 @@ add_library(chronicle-core
     "Renderer/Vulkan/VulkanPipeline.cc"
     "Renderer/Vulkan/VulkanRenderer.h"
     "Renderer/Vulkan/VulkanRenderer.cc"
-    "Renderer/Vulkan/VulkanRenderPass.h"
-    "Renderer/Vulkan/VulkanRenderPass.cc"
-    "Renderer/Vulkan/VulkanSemaphore.h"
-    "Renderer/Vulkan/VulkanSemaphore.cc"
+    "Renderer/Vulkan/VulkanTexture.h"
+    "Renderer/Vulkan/VulkanTexture.cc"
     "Renderer/Vulkan/VulkanUtils.h"
     "Renderer/Vulkan/VulkanUtils.cc"
     "Renderer/Vulkan/VulkanVertexBuffer.h"
