chore: refactor for Mesh and Material, mesh load time improvement

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -51,14 +51,22 @@ endfunction()
 
 add_library(chronicle-core
     "pch.cc"
-    "Assets/AssetLoader.h"
-    "Assets/AssetLoader.cc"
-    "Assets/MeshAsset.h"
-    "Assets/MeshAsset.cc"
-    "Assets/ShaderAsset.h"
-    "Assets/ShaderAsset.cc"
-    "Assets/TextureAsset.h"
-    "Assets/TextureAsset.cc"
+    "Assets/old/MeshAsset.h"
+    "Assets/old/MeshAsset.cc"
+    "Assets/old/ShaderAsset.h"
+    "Assets/old/ShaderAsset.cc"
+    "Assets/old/TextureAsset.h"
+    "Assets/old/TextureAsset.cc"
+    "Assets/Mesh.h"
+    "Assets/Mesh.cc"
+    "Assets/Material.h"
+    "Assets/Material.cc"
+    "Loaders/AssetLoader.h"
+    "Loaders/AssetLoader.cc"
+    "Loaders/PipelineLoader.h"
+    "Loaders/PipelineLoader.cc"
+    "Loaders/ShaderLoader.h"
+    "Loaders/ShaderLoader.cc"
     "Platform/Platform.h"
     "Platform/PlatformI.h"
     "Platform/Common.h"
@@ -70,8 +78,6 @@ add_library(chronicle-core
     "Renderer/DescriptorSetI.h"
     "Renderer/Enums.h"
     "Renderer/IndexBufferI.h"
-    "Renderer/MaterialI.h"
-    "Renderer/MeshI.h"
     "Renderer/PipelineI.h"
     "Renderer/PipelineInfo.h"
     "Renderer/Renderer.h"
@@ -83,6 +89,7 @@ add_library(chronicle-core
     "Renderer/TextureInfo.h"
     "Renderer/VertexBufferI.h"
     "Renderer/VertexBufferInfo.h"
+    "Renderer/VertexBuffersI.h"
     "Renderer/Vulkan/VulkanCommandBuffer.h"
     "Renderer/Vulkan/VulkanCommandBuffer.cc"
     "Renderer/Vulkan/VulkanCommon.h"
@@ -97,10 +104,6 @@ add_library(chronicle-core
     "Renderer/Vulkan/VulkanIndexBuffer.cc"
     "Renderer/Vulkan/VulkanInstance.h"
     "Renderer/Vulkan/VulkanInstance.cc"
-    "Renderer/Vulkan/VulkanMaterial.h"
-    "Renderer/Vulkan/VulkanMaterial.cc"
-    "Renderer/Vulkan/VulkanMesh.h"
-    "Renderer/Vulkan/VulkanMesh.cc"
     "Renderer/Vulkan/VulkanPipeline.h"
     "Renderer/Vulkan/VulkanPipeline.cc"
     "Renderer/Vulkan/VulkanRenderer.h"
@@ -115,6 +118,8 @@ add_library(chronicle-core
     "Renderer/Vulkan/VulkanUtils.cc"
     "Renderer/Vulkan/VulkanVertexBuffer.h"
     "Renderer/Vulkan/VulkanVertexBuffer.cc"
+    "Renderer/Vulkan/VulkanVertexBuffers.h"
+    "Renderer/Vulkan/VulkanVertexBuffers.cc"
     "Storage/Storage.h"
     "Storage/Storage.cc"
     "Utils/Camera.h"
