--- a/src/example/CMakeLists.txt
+++ b/src/example/CMakeLists.txt
@@ -1,25 +1,8 @@
 add_executable(chronicle-example
-    "main.cc")
+    "main.cc"
+)
 
 set_property(TARGET chronicle-example PROPERTY CXX_STANDARD 20)
-
-compile_shader(chronicle-example
-    ENV vulkan1.1
-    FORMAT bin
-    LANGUAGE hlsl
-    STAGE vertex
-    SOURCES
-        Shaders/triangle.vert.hlsl
-)
-
-compile_shader(chronicle-example
-    ENV vulkan1.1
-    FORMAT bin
-    LANGUAGE hlsl
-    STAGE fragment
-    SOURCES
-        Shaders/triangle.frag.hlsl
-)
 
 target_include_directories(chronicle-example
     PRIVATE
