--- a/.sonarlint/sonar.settings.json
+++ b/.sonarlint/sonar.settings.json
@@ -1,1 +1,10 @@
-{"sonar.exclusions":[],"sonar.global.exclusions":["**/build-wrapper-dump.json"],"sonar.inclusions":[]}
+{
+  "sonar.exclusions": [],
+  "sonar.global.exclusions": [
+    "**/build-wrapper-dump.json"
+  ],
+  "sonar.inclusions": [
+    "**/src/core/**",
+    "**/src/example/**"
+  ]
+}
