chore: add abstraction for render pass

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -84,6 +84,8 @@ add_library(chronicle-core
     "Renderer/Renderer.h"
     "Renderer/RendererError.h"
     "Renderer/RendererI.h"
+    "Renderer/RenderPassI.h"
+    "Renderer/RenderPassInfo.h"
     "Renderer/ShaderCompilerI.h"
     "Renderer/ShaderI.h"
     "Renderer/TextureI.h"
@@ -109,6 +111,8 @@ add_library(chronicle-core
     "Renderer/Vulkan/VulkanPipeline.cc"
     "Renderer/Vulkan/VulkanRenderer.h"
     "Renderer/Vulkan/VulkanRenderer.cc"
+    "Renderer/Vulkan/VulkanRenderPass.h"
+    "Renderer/Vulkan/VulkanRenderPass.cc"
     "Renderer/Vulkan/VulkanShaderCompiler.h"
     "Renderer/Vulkan/VulkanShaderCompiler.cc"
     "Renderer/Vulkan/VulkanShader.h"
