chore: add abstraction for framebuffer

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -78,6 +78,8 @@ add_library(chronicle-core
     "Renderer/DescriptorSetI.h"
     "Renderer/DescriptorSetLayout.h"
     "Renderer/Enums.h"
+    "Renderer/FrameBufferI.h"
+    "Renderer/FrameBufferInfo.h"
     "Renderer/IndexBufferI.h"
     "Renderer/PipelineI.h"
     "Renderer/PipelineInfo.h"
@@ -101,6 +103,8 @@ add_library(chronicle-core
     "Renderer/Vulkan/VulkanEnums.h"
     "Renderer/Vulkan/VulkanEvents.h"
     "Renderer/Vulkan/VulkanExtensions.h"
+    "Renderer/Vulkan/VulkanFrameBuffer.h"
+    "Renderer/Vulkan/VulkanFrameBuffer.cc"
     "Renderer/Vulkan/VulkanImGui.h"
     "Renderer/Vulkan/VulkanImGui.cc"
     "Renderer/Vulkan/VulkanIndexBuffer.h"
