chore: work on editor and other minor stuff

--- a/.sonarlint/skaman_chronicle7_cpp_settings.json
+++ b/.sonarlint/skaman_chronicle7_cpp_settings.json
@@ -1485,10 +1485,6 @@
       "level": "On",
       "severity": "Major"
     },
-    "cpp:S6190": {
-      "level": "On",
-      "severity": "Major"
-    },
     "cpp:S6195": {
       "level": "On",
       "severity": "Major"
@@ -2184,6 +2180,9 @@
       "level": "Off"
     },
     "cpp:S1749": {
+      "level": "Off"
+    },
+    "cpp:S6190": {
       "level": "Off"
     },
     "cpp:S2806": {
