--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -1,5 +1,14 @@
+find_package(Python REQUIRED COMPONENTS Interpreter)
+
 add_executable(chronicle-editor
+    "Widgets/DockArea.h"
+    "Widgets/DockArea.cc"
+    "Widgets/DockPanel.h"
+    "Widgets/DockPanel.cc"
     "main.cc"
+    "MainWindow.h"
+    "MainWindow.cc"
+    "Resources.h"
 )
 
 set_property(TARGET chronicle-editor PROPERTY CXX_STANDARD 20)
@@ -12,6 +21,14 @@ target_include_directories(chronicle-editor
 target_precompile_headers(chronicle-editor
   PUBLIC
     "pch.h"
+)
+
+embed_asset(chronicle-editor
+    SOURCES
+        "Resources/Icons/WindowClose.png"
+        "Resources/Icons/WindowMaximize.png"
+        "Resources/Icons/WindowMinimize.png"
+        "Resources/Icons/WindowRestore.png"
 )
 
 target_link_libraries(chronicle-editor
