refactor: rename files from .cc to .cpp

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -26,28 +26,28 @@ function(embed_asset target)
 endfunction()
 
 add_library(chronicle-core
-    "pch.cc"
+    "pch.cpp"
+    "Assets/old/MeshAsset.cpp"
     "Assets/old/MeshAsset.h"
-    "Assets/old/MeshAsset.cc"
+    "Assets/old/ShaderAsset.cpp"
     "Assets/old/ShaderAsset.h"
-    "Assets/old/ShaderAsset.cc"
+    "Assets/old/TextureAsset.cpp"
     "Assets/old/TextureAsset.h"
-    "Assets/old/TextureAsset.cc"
+    "Assets/Mesh.cpp"
     "Assets/Mesh.h"
-    "Assets/Mesh.cc"
+    "Assets/Material.cpp"
     "Assets/Material.h"
-    "Assets/Material.cc"
+    "Loaders/AssetLoader.cpp"
     "Loaders/AssetLoader.h"
-    "Loaders/AssetLoader.cc"
+    "Loaders/PipelineLoader.cpp"
     "Loaders/PipelineLoader.h"
-    "Loaders/PipelineLoader.cc"
+    "Loaders/ShaderLoader.cpp"
     "Loaders/ShaderLoader.h"
-    "Loaders/ShaderLoader.cc"
     "Platform/Platform.h"
     "Platform/PlatformI.h"
     "Platform/Common.h"
+    "Platform/GLFW/GLFWPlatform.cpp"
     "Platform/GLFW/GLFWPlatform.h"
-    "Platform/GLFW/GLFWPlatform.cc"
     "Platform/GLFW/GLFWCommon.h"
     "Renderer/CommandBufferI.h"
     "Renderer/Common.h"
@@ -70,45 +70,45 @@ add_library(chronicle-core
     "Renderer/TextureInfo.h"
     "Renderer/VertexBufferI.h"
     "Renderer/VertexBufferInfo.h"
+    "Renderer/Vulkan/VulkanCommandBuffer.cpp"
     "Renderer/Vulkan/VulkanCommandBuffer.h"
-    "Renderer/Vulkan/VulkanCommandBuffer.cc"
     "Renderer/Vulkan/VulkanCommon.h"
+    "Renderer/Vulkan/VulkanDescriptorSet.cpp"
     "Renderer/Vulkan/VulkanDescriptorSet.h"
-    "Renderer/Vulkan/VulkanDescriptorSet.cc"
     "Renderer/Vulkan/VulkanEnums.h"
     "Renderer/Vulkan/VulkanEvents.h"
     "Renderer/Vulkan/VulkanExtensions.h"
+    "Renderer/Vulkan/VulkanFrameBuffer.cpp"
     "Renderer/Vulkan/VulkanFrameBuffer.h"
-    "Renderer/Vulkan/VulkanFrameBuffer.cc"
     "Renderer/Vulkan/VulkanGC.h"
+    "Renderer/Vulkan/VulkanImGui.cpp"
     "Renderer/Vulkan/VulkanImGui.h"
-    "Renderer/Vulkan/VulkanImGui.cc"
+    "Renderer/Vulkan/VulkanIndexBuffer.cpp"
     "Renderer/Vulkan/VulkanIndexBuffer.h"
-    "Renderer/Vulkan/VulkanIndexBuffer.cc"
+    "Renderer/Vulkan/VulkanInstance.cpp"
     "Renderer/Vulkan/VulkanInstance.h"
-    "Renderer/Vulkan/VulkanInstance.cc"
+    "Renderer/Vulkan/VulkanPipeline.cpp"
     "Renderer/Vulkan/VulkanPipeline.h"
-    "Renderer/Vulkan/VulkanPipeline.cc"
+    "Renderer/Vulkan/VulkanRenderer.cpp"
     "Renderer/Vulkan/VulkanRenderer.h"
-    "Renderer/Vulkan/VulkanRenderer.cc"
+    "Renderer/Vulkan/VulkanRenderPass.cpp"
     "Renderer/Vulkan/VulkanRenderPass.h"
-    "Renderer/Vulkan/VulkanRenderPass.cc"
+    "Renderer/Vulkan/VulkanShaderCompiler.cpp"
     "Renderer/Vulkan/VulkanShaderCompiler.h"
-    "Renderer/Vulkan/VulkanShaderCompiler.cc"
+    "Renderer/Vulkan/VulkanShader.cpp"
     "Renderer/Vulkan/VulkanShader.h"
-    "Renderer/Vulkan/VulkanShader.cc"
+    "Renderer/Vulkan/VulkanTexture.cpp"
     "Renderer/Vulkan/VulkanTexture.h"
-    "Renderer/Vulkan/VulkanTexture.cc"
+    "Renderer/Vulkan/VulkanUtils.cpp"
     "Renderer/Vulkan/VulkanUtils.h"
-    "Renderer/Vulkan/VulkanUtils.cc"
+    "Renderer/Vulkan/VulkanVertexBuffer.cpp"
     "Renderer/Vulkan/VulkanVertexBuffer.h"
-    "Renderer/Vulkan/VulkanVertexBuffer.cc"
+    "Storage/Storage.cpp"
     "Storage/Storage.h"
-    "Storage/Storage.cc"
+    "Utils/Camera.cpp"
     "Utils/Camera.h"
-    "Utils/Camera.cc"
+    "Utils/Scene.cpp"
     "Utils/Scene.h"
-    "Utils/Scene.cc"
 
     # IMGUI
     "../../vendor/imgui/imgui.cpp"
