refactor: rename Renderer in RenderContext

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -61,7 +61,7 @@ add_library(chronicle-core
     "Renderer/PipelineInfo.h"
     "Renderer/Renderer.h"
     "Renderer/RendererError.h"
-    "Renderer/RendererI.h"
+    "Renderer/RenderContextI.h"
     "Renderer/RenderPassI.h"
     "Renderer/RenderPassInfo.h"
     "Renderer/ShaderCompilerI.h"
@@ -89,8 +89,8 @@ add_library(chronicle-core
     "Renderer/Vulkan/VulkanInstance.h"
     "Renderer/Vulkan/VulkanPipeline.cpp"
     "Renderer/Vulkan/VulkanPipeline.h"
-    "Renderer/Vulkan/VulkanRenderer.cpp"
-    "Renderer/Vulkan/VulkanRenderer.h"
+    "Renderer/Vulkan/VulkanRenderContext.cpp"
+    "Renderer/Vulkan/VulkanRenderContext.h"
     "Renderer/Vulkan/VulkanRenderPass.cpp"
     "Renderer/Vulkan/VulkanRenderPass.h"
     "Renderer/Vulkan/VulkanShaderCompiler.cpp"
